--- a/busqueda2.html
+++ b/busqueda2.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="mt-5">
 			<div class="col-12">
 			    <div class="card-custom bg-light">
@@ -50,28 +50,28 @@
 						                    			</span>
 						                    			<ul class="dropdown-optgroup2">
 						                    				<!--Empieza la basura    -->
-						                    				<li class="dropdown-option2" id="custom" >
+						                    				<li class="dropdown-option2"  >
 						                    					<span>Cruceros a África</span>					          
 						                    					<input type="checkbox" checked="checked">			         
 						                    				</li>
-						                    				<li class="dropdown-option2" id="custom" >
-						                    					<span>Cruceros a África</span>					          
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Cruceros por Alaska</span>					          
 						                    					<input type="checkbox" checked="checked">			         
 						                    				</li>
-						                    				<li class="dropdown-option2" id="custom" >
-						                    					<span>Cruceros a África</span>					          
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Cruceros a Asia</span>					          
 						                    					<input type="checkbox" checked="checked">			         
 						                    				</li>
-						                    				<li class="dropdown-option2" id="custom" >
-						                    					<span>Cruceros a África</span>					          
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Cruceros por el Mediterráneo</span>					          
 						                    					<input type="checkbox" checked="checked">			         
 						                    				</li>
-						                    				<li class="dropdown-option2" id="custom" >
-						                    					<span>Cruceros a África</span>					          
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Cruceros por la Riviera Mexicana</span>					          
 						                    					<input type="checkbox" checked="checked">			         
 						                    				</li>
-						                    				<li class="dropdown-option2" id="custom" >
-						                    					<span>Cruceros a África</span>					          
+						                    				<li class="dropdown-option2" >
+						                    					<span>Cruceros en el norte de Europa</span>					          
 						                    					<input type="checkbox" checked="checked">			         
 						                    				</li>
 						                    			</ul>
@@ -97,12 +97,30 @@
 						                    				<button class="tail-none2">Ninguno</button>
 						                    			</span>
 						                    			<ul class="dropdown-optgroup">
-						                    				<li class="dropdown-option2" >Ámsterdam, Países Bajos</li>
-						                    				<li class="dropdown-option2" >Ciudad de Panamá (Colón), Panamá</li>
-						                    				<li class="dropdown-option2" >Atenas (El Pireo), Grecia</li>
-						                    				<li class="dropdown-option2" >Ciudad de Panamá (Fuerte Amador), Panamá</li>
-						                    				<li class="dropdown-option2" >Papeete, Tahití, Polinesia Francesa</li>
-						                    				<li class="dropdown-option2" >Bangkok (Laem Chabang), Tailandia</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Los Ángeles, California</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>San Diego, California</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Ámsterdam, Países Bajos</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2" >
+						                    					<span>Atenas (El Pireo), Grecia</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Bali (Benoa), Indonesia</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2" >
+						                    					<span>Río de Janeiro, Brasil</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
 						                    			</ul>
 						                    		</div>
 						                    	</div>
@@ -152,14 +170,7 @@
 						                    		<span class="label-inner3">Duracion</span>
 						                    	</div>
 						                    	<div class="select-dropdown3 hidden" >
-						                    		<div class="dropdown-search3">
-						                    			<input type="text" class="search-input3" placeholder="Buscar...">
-						                    		</div>
 						                    		<div class="dropdown-inner3">
-						                    			<span class="dropdown-action3">
-						                    				<button class="tail-all3">Todos</button>
-						                    				<button class="tail-none3">Ninguno</button>
-						                    			</span>
 						                    			<ul class="dropdown-optgroup3" >
 						                    				<li class="dropdown-option3">1-4 Dias</li>
 						                    				<li class="dropdown-option3" >5-8 Dias</li>
@@ -177,18 +188,34 @@
 						                    		<span class="label-inner">Crucero</span>
 						                    	</div>
 						                    	<div class="select-dropdown" >
-						                    		<div class="dropdown-search">
-						                    			<input type="text" class="search-input" placeholder="Buscar...">
-						                    		</div>
+						                    		
 						                    		<div class="dropdown-inner">
-						                    			<span class="dropdown-action">
-						                    				<button class="tail-all">Todos</button>
-						                    				<button class="tail-none">Ninguno</button>
-						                    			</span>
+						                    			
 						                    			<ul class="dropdown-optgroup" data-group="#">
-						                    				<li class="dropdown-option" >Norwegian Bliss</li>
-						                					<li class="dropdown-option" >Norwegian Breakaway</li>
-						                					<li class="dropdown-option" >Norwegian Dawn</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Los Ángeles, California</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>San Diego, California</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Ámsterdam, Países Bajos</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Atenas (El Pireo), Grecia</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2" >
+						                    					<span>Bali (Benoa), Indonesia</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
+						                    				<li class="dropdown-option2"  >
+						                    					<span>Río de Janeiro, Brasil</span>					          
+						                    					<input type="checkbox" checked="checked">			         
+						                    				</li>
 						                    			</ul>
 						                    		</div>
 						                    	</div>
