--- a/busqueda2.html
+++ b/busqueda2.html
@@ -44,10 +44,7 @@
 						                    			<input type="text" class="search-input2" placeholder="Buscar...">
 						                    		</div>
 						                    		<div class="dropdown-inner2 ">
-						                    			<span class="dropdown-action2">
-						                    				<button class="tail-all2">Todos</button>
-						                    				<button class="tail-none2">Ninguno</button>
-						                    			</span>
+						                    			
 						                    			<ul class="dropdown-optgroup2">
 						                    				<!--Empieza la basura    -->
 						                    				<li class="dropdown-option2"  >
@@ -92,10 +89,6 @@
 						                    			<input type="text" class="search-input2" placeholder="Buscar...">
 						                    		</div>
 						                    		<div class="dropdown-inner2">
-						                    			<span class="dropdown-action2">
-						                    				<button class="tail-all2">Todos</button>
-						                    				<button class="tail-none2">Ninguno</button>
-						                    			</span>
 						                    			<ul class="dropdown-optgroup">
 						                    				<li class="dropdown-option2"  >
 						                    					<span>Los Ángeles, California</span>					          
@@ -163,7 +156,7 @@
 						       			</div>
 						       		</div><!--Cierre fila con 3 botones-->
 						       		<div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 " >
-						       			<div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-2 mt-sm-2 mt-md-2"  >
+						       			<div class="col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2 mt-2 mt-sm-2 mt-md-2"  >
 										    <div  id="select4" class="tail-select3 no-classes multiple " tabindex="0" >
 						                    	<div class="select-label3 tail-select-container3">
 						                    		<span class="label-count3">0</span>
@@ -181,7 +174,7 @@
 						                    	</div>
 						                    </div>
 						       			</div>
-						       			<div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-2 mt-sm-2 mt-md-2" >
+						       			<div class="col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2 mt-2 mt-sm-2 mt-md-2" >
 										    <div class="tail-select no-classes multiple" tabindex="0" id="select5">
 						                    	<div class="select-label tail-select-container">
 						                    		<span class="label-count">0</span>
@@ -227,7 +220,7 @@
 					       		<div class="row col-12 col-sm-12 col-md-12 col-lg-3 col-xl-3 " >
 					       			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
 					       				<div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mt-2 mt-sm-2 mt-md-2 " >
-						       				<button type="button" class="btn btn-custom col-12 ">Buscar Crucero</button>
+						       				<button type="button" class="btn btn-custom col-12 ">BUSCAR CRUCERO</button>
 						       			</div>	
 					       			</div>	
 					       		</div><!--Cierre de contenedor boton buscar -->
