--- a/busqueda2.html
+++ b/busqueda2.html
@@ -282,7 +282,7 @@
 							       		</div>						       			
 						       		</div><!--Cierre fila con 3 botones-->
 						       		<div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 " >
-						       			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-2 mt-sm-2 mt-md-2">
+						       			<div class="col-12 col-sm-12 col-md-6 col-lg-12 col-xl-6 mt-2 mt-sm-2 mt-md-2">
 						       				<div class="tail-select-custom-calendar" >
 												<div class="select-label-custom tail-select-container-custom">
 											       <span class="label-count-custom ">
@@ -530,7 +530,7 @@
 												</div>
 											</div>
 						       			</div>
-						       			<div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-2 mt-sm-2 mt-md-2"  >
+						       			<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mt-2 mt-sm-2 mt-md-2"  >
 						       				<div class="tail-select-custom" >
 												<div class="select-label-custom tail-select-container-custom">
 											       <span class="label-count-custom ">
@@ -575,20 +575,24 @@
 															</li>
 														</div>	
 													</div>
-													<div class="footer-dropdown-custom">
-														<div class="cruise-count row">
-															<div class="col-6 col-sm-6 col-md-8 col-lg-6 col-xl-7">
-																<span>8 Cruceros</span>
+													<div class="footer-dropdown-custom-small">
+														<div class="cruise-count-small">
+															<div class="container-left-footer-small">
+																<div class="text-footer-small">
+																	8 Cruceros
+																</div>																
 															</div>
-															<div class="col-6 col-sm-6 col-md-4 col-lg-6 col-xl-5 options-footer">
-																<span class="footer-option-custom ">SOLICITAR</span>
+															<div class="container-right-footer-small">					
+																<div class="container-input-small">
+																	SOLICITAR
+																</div>						 
 															</div>
 														</div>
 													</div>
 												</div>
 											</div>
 						       			</div>
-						       			<div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-2 mt-sm-2 mt-md-2" >
+						       			<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mt-2 mt-sm-2 mt-md-2" >
 
 
 
@@ -657,13 +661,17 @@
 			                                                </div>
 	                                                	</div>
 													</div>
-													<div class="footer-dropdown-custom">
-														<div class="cruise-count row">
-															<div class="col-6 col-sm-6 col-md-8 col-lg-6 col-xl-7">
-																<span>8 Cruceros</span>
+													<div class="footer-dropdown-custom-small">
+														<div class="cruise-count-small">
+															<div class="container-left-footer-small">
+																<div class="text-footer-small">
+																	8 Cruceros
+																</div>																
 															</div>
-															<div class="col-8 col-sm-6 col-md-4 col-lg-6 col-xl-5 options-footer">
-																<span class="footer-option-custom ">SOLICITAR</span>
+															<div class="container-right-footer-small">					
+																<div class="container-input-small">
+																	SOLICITAR
+																</div>						 
 															</div>
 														</div>
 													</div>
@@ -696,150 +704,6 @@
 			    </div>
 	  		</div>	
 		</div> 
-		<!--BUSCADOR 
-
-		
-
-		<div class="container-fluid">
-			<div class="tail-select-custom" >
-												<div class="select-label-custom tail-select-container-custom">
-											       <span class="label-count-custom ">
-											            <i class="far fa-calendar-plus"></i>
-											        </span>
-											        <span class="label-inner-custom">Fecha</span>
-											    </div>
-						    					<div class="all-dropdown">
-													<div class="dropdown-search-custom">
-														<input type="text" class="search-input2" placeholder="Encontrar Puerto de Salida .....">
-													</div>
-													<div class="select-dropdown-custom">
-														<div class="dropdown-inner-custom-cuatro">
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox37">
-																	<label for="checkbox37" >
-																		<span>1-4 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox38">
-																	<label for="checkbox38" >
-																		<span>5-8 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox39">
-																	<label for="checkbox39" >
-																		<span>9-14 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox40">
-																	<label for="checkbox40" >
-																		<span>+15 Dias</span>
-																	</label>
-																</div>
-															</li>
-														</div>
-
-
-                                                        
-
-
-														<div class="dropdown-inner-custom-cuatro">
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox37">
-																	<label for="checkbox37" >
-																		<span>1-4 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox38">
-																	<label for="checkbox38" >
-																		<span>5-8 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox39">
-																	<label for="checkbox39" >
-																		<span>9-14 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox40">
-																	<label for="checkbox40" >
-																		<span>+15 Dias</span>
-																	</label>
-																</div>
-															</li>
-														</div>
-														<div class="dropdown-inner-custom-cuatro">
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox37">
-																	<label for="checkbox37" >
-																		<span>1-4 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox38">
-																	<label for="checkbox38" >
-																		<span>5-8 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox39">
-																	<label for="checkbox39" >
-																		<span>9-14 Dias</span>
-																	</label>
-																</div>
-															</li>
-															<li class="option-custom-buttons" >
-																<div class="checkbox-custom-buttons">
-																	<input type="checkbox" name="checkbox" id="checkbox40">
-																	<label for="checkbox40" >
-																		<span>+15 Dias</span>
-																	</label>
-																</div>
-															</li>
-														</div>
-
-													</div>
-													<div class="footer-dropdown-custom">
-														<div class="cruise-count row">
-															<div class="col-6 col-sm-6 col-md-8 col-lg-6 col-xl-7">
-																<span>8 Cruceros</span>
-															</div>
-															<div class="col-6 col-sm-6 col-md-4 col-lg-6 col-xl-5 options-footer">
-																<span class="footer-option-custom ">SOLICITAR</span>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-		</div>-->
-
-
-		
-
-
 
 
 
