--- a/busqueda2.html
+++ b/busqueda2.html
@@ -15,7 +15,7 @@
         <link href="css/default/destino_salida.css" rel="stylesheet" type="text/css" />
         <link href="css/default/crucero.css" rel="stylesheet" type="text/css" />
         <link href="css/default/duracion.css" rel="stylesheet" type="text/css" />
-
+    <link href="css/default/Destinos.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
@@ -706,7 +706,15 @@
 		</div> 
 
 
-
+      
+  <div class="overlay">
+    <div class="popup">
+        <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">
+            <i></i>
+        </a>
+        <h3>Key words</h3>
+      </div>    
+  </div>
 
 
 	
