--- a/ResultadoBusqueda.html
+++ b/ResultadoBusqueda.html
@@ -91,10 +91,9 @@
 
     <div class="contenedor" dis>    
         <input type="checkbox" id="menu_bar">
-        <label class="fas fa-bars menu-icon" for="menu_bar"></label>
+        <label class="fas fa-filter menu-icon" for="menu_bar"></label>
         <nav class="menu">
-          
-        <div class="container-fluid">
+        <div class="container-fluid" >
 		<!--BUSCADOR -->
 
 		
@@ -103,7 +102,7 @@
 			      	<div class="card-body">
 				        <h5 class="card-title">Explorar 999 Cruceros</h5>
 				        	<div class="row" >
-				       			<div class="row col-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 " >
+				       			<div class="row col-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 "  >
 						       		<div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 " ><!--div de los 3 primeros botones -->
 						       			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-2 mt-sm-2 mt-md-2" >
 						       				<div id="select1" class="tail-select-custom" >
